welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:1: error: Missing closing brace `}' assumed here
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
^answerCell:20: error: Missing closing brace `}' assumed here
 }
 ^